--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="wrapper">
        <h1>Hangman</h1>
-        <h2>Vanilla JavaScript Hangman Game</h2>
+        <h2>The Hangman Game</h2>
         <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
     </div>
     <div class="wrapper">
